# gr-dvbs2acm

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.md  README.md  build.sh  docker-compose.yml  install.sh  meson.build  meson_options.txt  rebind.sh
apps/: CMakeLists.txt
blocklib/dvbs2acm/bbheader_bb/: bbheader_bb.yml  bbheader_bb_cpu.cc  bbheader_bb_cpu.h  qa_bbheader_bb.py
blocklib/dvbs2acm/include/gnuradio/dvbs2acm/: .gitignore  meson.build
blocklib/dvbs2acm/lib/: meson.build
blocklib/dvbs2acm/python/gnuradio/dvbs2acm/: __init__.py
cmake/Modules/: gnuradio-dvbs2acmConfig.cmake
docs/: CMakeLists.txt  README.dvbs2acm
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: dvbs2acm_fec_ber.grc  dvbs2acm_rx_hier.grc  dvbs2acm_tx.grc  dvbs2acm_tx_hier.grc  dvbs2acm_tx_rx.grc
grc/: CMakeLists.txt  dvbs2acm_bbdeheader_bb.block.yml  dvbs2acm_bbdescrambler_bb.block.yml  dvbs2acm_bbheader_bb.block.yml  dvbs2acm_bbscrambler_bb.block.yml  dvbs2acm_bch_bb.block.yml  dvbs2acm_bch_decoder_bb.block.yml  dvbs2acm_bch_encoder_bb.block.yml  dvbs2acm_deinterleaver_bb.block.yml  dvbs2acm_demodulator_cb.block.yml  dvbs2acm_interleaver_bb.block.yml  dvbs2acm_ldpc_decoder_bb.block.yml  dvbs2acm_ldpc_decoder_cb.block.yml  dvbs2acm_ldpc_decoder_hybrid_cb.block.yml  dvbs2acm_ldpc_encoder_bb.block.yml  dvbs2acm_modcod_probe.block.yml  dvbs2acm_modulator_bc.block.yml  dvbs2acm_physical_cc.block.yml  dvbs2acm_plsync_cc.block.yml  dvbs2acm_rotator_cc.block.yml  dvbs2acm_rx_hier.block.yml  dvbs2acm_symbol_sync_cc.block.yml  dvbs2acm_tx_hier.block.yml
include/gnuradio/dvbs2acm/: CMakeLists.txt  api.h  bbdeheader_bb.h  bbdescrambler_bb.h  bbheader_bb.h  bbscrambler_bb.h  bch_bb.h  bch_decoder_bb.h  bch_encoder_bb.h  deinterleaver_bb.h  demodulator_cb.h  dvbs2_config.h  interleaver_bb.h  ldpc_decoder_bb.h  ldpc_decoder_cb.h  ldpc_decoder_hybrid_cb.h  ldpc_encoder_bb.h  modulator_bc.h  physical_cc.h  plsync_cc.h  rotator_cc.h  symbol_sync_cc.h
lib/: CMakeLists.txt  bb_header.cc  bb_header.hh  bbdeheader_bb_impl.cc  bbdeheader_bb_impl.h  bbdescrambler_bb_impl.cc  bbdescrambler_bb_impl.h  bbheader_bb_impl.cc  bbheader_bb_impl.h  bbscrambler_bb_impl.cc  bbscrambler_bb_impl.h  bch_bb_impl.cc  bch_bb_impl.h  bch_code.cc  bch_code.h  bch_decoder.hh  bch_decoder_bb_impl.cc  bch_decoder_bb_impl.h  bch_encoder_bb_impl.cc  bch_encoder_bb_impl.h  bitman.hh  debug_level.h  deinterleaver_bb_impl.cc  deinterleaver_bb_impl.h  demodulator_cb_impl.cc  demodulator_cb_impl.h  frame_stream.hh  galois_field.hh  interleaver_bb_impl.cc  interleaver_bb_impl.h  ldpc_decoder_bb_impl.cc  ldpc_decoder_bb_impl.h  ldpc_decoder_cb_impl.cc  ldpc_decoder_cb_impl.h  ldpc_decoder_hybrid_cb_impl.cc  ldpc_decoder_hybrid_cb_impl.h  ldpc_encode_tables.cc  ldpc_encode_tables.h  ldpc_encode_tables_normal.hxx  ldpc_encode_tables_normal_x.hxx  (+20 more)
lib/ldpc_decoder/: CMakeLists.txt  ldpc.cc  ldpc.hh
lib/plsync/: CMakeLists.txt  cdeque.h  delay_line.h  pi2_bpsk.cc  pi2_bpsk.h  pl_defs.h  pl_descrambler.cc  pl_descrambler.h  pl_frame_sync.cc  pl_frame_sync.h  pl_freq_sync.cc  pl_freq_sync.h  pl_signaling.cc  pl_signaling.h  pl_submodule.h  reed_muller.cc  reed_muller.h  util.cc  util.h
python/dvbs2acm/: CMakeLists.txt  __init__.py  qa_plsync_cc.py  qa_rotator_cc.py  qa_symbol_sync_cc.py  qa_tx_hier.py  rx_hier.py  tx_hier.py
python/dvbs2acm/bindings/: CMakeLists.txt  bbdeheader_bb_python.cc  bbdescrambler_bb_python.cc  bbheader_bb_python.cc  bbscrambler_bb_python.cc  bch_bb_python.cc  bch_decoder_bb_python.cc  bch_encoder_bb_python.cc  deinterleaver_bb_python.cc  demodulator_cb_python.cc  dvbs2_config_python.cc  interleaver_bb_python.cc  ldpc_decoder_bb_python.cc  ldpc_decoder_cb_python.cc  ldpc_decoder_hybrid_cb_python.cc  ldpc_encoder_bb_python.cc  modulator_bc_python.cc  physical_cc_python.cc  plsync_cc_python.cc  python_bindings.cc  rotator_cc_python.cc  symbol_sync_cc_python.cc
python/dvbs2acm/bindings/docstrings/: bbdeheader_bb_pydoc_template.h  bbdescrambler_bb_pydoc_template.h  bbheader_bb_pydoc_template.h  bbscrambler_bb_pydoc_template.h  bch_bb_pydoc_template.h  bch_decoder_bb_pydoc_template.h  bch_encoder_bb_pydoc_template.h  deinterleaver_bb_pydoc_template.h  demodulator_cb_pydoc_template.h  dvbs2_config_pydoc_template.h  interleaver_bb_pydoc_template.h  ldpc_decoder_bb_pydoc_template.h  ldpc_decoder_cb_pydoc_template.h  ldpc_decoder_hybrid_cb_pydoc_template.h  ldpc_encoder_bb_pydoc_template.h  modulator_bc_pydoc_template.h  physical_cc_pydoc_template.h  plsync_cc_pydoc_template.h  rotator_cc_pydoc_template.h  symbol_sync_cc_pydoc_template.h
subprojects/: cpu_features.wrap  pmt.wrap
utils/blockbuilder/schema/: gnuradio-block.json
utils/blockbuilder/scripts/: gen_meson.py
utils/blockbuilder/templates/: api.h.j2  blockname.h.j2  macros.j2
utils/modtool/: create_block.py
